<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Desafio 2 - AM200230- OC200384"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMenu"
        android:layout_below="@id/tvTitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/rgb"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnBelleza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBelleza"
        android:layout_below="@id/btnMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/rgb"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnFarmacia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFarmacia"
        android:layout_below="@id/btnBelleza"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/rgb"
        android:textColor="@color/white"/>

</RelativeLayout>